--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,4 +7,12 @@
 
 @import "_header";
 
+@import "homepage/_hero";
+@import "homepage/_store";
+@import "homepage/_categories";
+@import "homepage/_brands";
+@import "homepage/_why";
+@import "homepage/_customers";
+@import "homepage/_browser";
+
 @import "_footer";
