--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,5 +2,6 @@ $body: #666;
 $title: #14183e;
 $titleSpan: #ff6428;
 $menu: #121212;
-$black: #080809;
+$footerBg: #eeeeee;
+$black: #000;
 $white: #fff;
