--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,13 +2,41 @@
   background-color: $footerBg;
   padding: 80px 0 43px;
 
+  @media (max-width: 900px) {
+    padding: 55px 0 30px;
+  }
+
+  @media (max-width: 600px) {
+    padding: 30px 0 15px;
+  }
+
   &__wrapper {
     display: flex;
-    margin-bottom: 80px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0 14px 80px 40px;
+    column-gap: 40px;
+    row-gap: 40px;
+
+    @media (max-width: 900px) {
+      margin: 0 0 55px;
+    }
+
+    @media (max-width: 600px) {
+      max-width: max-content;
+      margin: 0 auto 30px;
+      flex-direction: column;
+      justify-content: flex-start;
+      row-gap: 20px;
+    }
   }
 
   &__contacts {
     margin-right: auto;
+
+    @media (max-width: 900px) {
+      margin-right: 0;
+    }
   }
 
   &__logo {
@@ -28,6 +56,17 @@
     &:active {
       outline: transparent;
       opacity: 0.75;
+    }
+
+    @media (max-width: 600px) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__img {
+    @media (max-width: 600px) {
+      width: 150px;
+      height: 36px;
     }
   }
 
@@ -70,7 +109,12 @@
   &__nav {
     display: flex;
     column-gap: 126px;
-    margin-right: 161px;
+    margin-right: 8%;
+
+    @media (max-width: 900px) {
+      margin-right: 0;
+      column-gap: 70px;
+    }
   }
 
   &__title {
