--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -84,4 +84,12 @@ main {
   span {
     color: $titleSpan;
   }
+
+  @media (max-width: 900px) {
+    font-size: 34px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
 }
