--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,14 +1,43 @@
 .header {
   position: fixed;
-  top: 62px;
+  padding: 10px 0;
+  top: 52px;
   width: 100%;
   z-index: 20;
+  transform: translateY(0);
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+
+  @media (max-width: 900px) {
+    top: 42px;
+  }
+
+  @media (max-width: 600px) {
+    top: 5px;
+  }
+
+  &--fixed {
+    background-color: $white;
+    box-shadow: 0px 0px 15px 0px rgba($color: $black, $alpha: 0.7);
+    top: 0;
+
+    @media (max-width: 900px) {
+      top: 0;
+    }
+
+    @media (max-width: 600px) {
+      top: 0;
+    }
+  }
+
+  &--out {
+    transform: translateY(-200%);
+  }
 
   &__nav {
     display: flex;
   }
 
-  &__logo {
+  &__logos {
     margin-right: 131px;
     transition: filter 0.2s ease-in-out;
 
@@ -25,18 +54,56 @@
       outline: transparent;
       opacity: 0.75;
     }
+
+    @media (max-width: 600px) {
+      margin-right: 30px;
+      display: flex;
+    }
+  }
+
+  &__logo {
+    display: inline-block;
+
+    &:focus {
+      outline: 2px solid $menu;
+      border-radius: 5px;
+    }
+    @media (max-width: 600px) {
+      display: none;
+    }
+  }
+
+  &__logo-mobile {
+    display: none;
+    filter: drop-shadow(0px 4px 4px rgba($color: $black, $alpha: 0.25));
+
+    &:focus {
+      outline: 2px solid $menu;
+      border-radius: 50%;
+    }
+
+    @media (max-width: 600px) {
+      display: inline-block;
+    }
   }
 
   &__menu {
     display: flex;
-    column-gap: 56px;
+    column-gap: 46px;
     align-items: center;
+
+    @media (max-width: 600px) {
+      column-gap: 15px;
+    }
   }
 
   &__link {
     font-weight: 500;
     color: rgba($color: $menu, $alpha: 0.4);
     transition: color 0.2s ease-in-out;
+    background-color: rgba($color: $white, $alpha: 0.5);
+    padding: 0 5px;
+    border-radius: 5px;
 
     &:hover {
       color: rgba($color: $menu, $alpha: 1);
@@ -50,6 +117,10 @@
     &:active {
       outline: transparent;
       opacity: 0.75;
+    }
+
+    @media (max-width: 600px) {
+      color: rgba($color: $menu, $alpha: 1);
     }
   }
 }
