--- a/src/scss/homepage/_brands.scss
+++ b/src/scss/homepage/_brands.scss
@@ -1,8 +1,24 @@
 .brands {
   margin-bottom: 180px;
 
+  @media (max-width: 900px) {
+    margin-bottom: 80px;
+  }
+
+  @media (max-width: 600px) {
+    margin-bottom: 40px;
+  }
+
   .title {
     margin-bottom: 75px;
+
+    @media (max-width: 900px) {
+      margin-bottom: 50px;
+    }
+
+    @media (max-width: 600px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__list {
@@ -12,6 +28,17 @@
     justify-content: space-between;
     align-items: center;
     row-gap: 100px;
+    column-gap: 10px;
+
+    @media (max-width: 900px) {
+      grid-template-columns: repeat(2, max-content);
+      justify-content: space-evenly;
+      row-gap: 50px;
+    }
+
+    @media (max-width: 900px) {
+      row-gap: 30px;
+    }
   }
 
   &__item {
@@ -28,7 +55,16 @@
     transition: box-shadow 0.2s ease-in-out;
 
     &:hover {
-      box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 0px 0px 15px 0px rgba($color: $black, $alpha: 0.75);
+    }
+
+    &:focus {
+      outline: 2px solid $menu;
+    }
+
+    &:active {
+      outline: transparent;
+      opacity: 0.75;
     }
   }
 }
