--- a/src/scss/homepage/_categories.scss
+++ b/src/scss/homepage/_categories.scss
@@ -1,12 +1,29 @@
 .categories {
   margin-bottom: 220px;
 
+  @media (max-width: 900px) {
+    margin-bottom: 110px;
+  }
+
+  @media (max-width: 600px) {
+    margin-bottom: 40px;
+  }
+
   .title {
     margin-bottom: 80px;
+
+    @media (max-width: 900px) {
+      margin-bottom: 50px;
+    }
+
+    @media (max-width: 600px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     grid-gap: 25px;
     margin: 0 56px;
@@ -17,6 +34,7 @@
     border-radius: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
+    transition: transform 0.2s ease-in-out;
 
     &::after {
       content: "";
@@ -29,6 +47,14 @@
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.16) 50%, rgba(0, 0, 0, 0.8) 100%);
       border-radius: 20px;
     }
+
+    &:hover {
+      transform: scale(1.1);
+
+      .categories__name {
+        color: $titleSpan;
+      }
+    }
   }
 
   &__name {
@@ -40,5 +66,6 @@
     color: $white;
     font-weight: 600;
     font-size: 20px;
+    transition: color 0.2s ease-in-out;
   }
 }
