--- a/src/scss/homepage/_hero.scss
+++ b/src/scss/homepage/_hero.scss
@@ -1,9 +1,31 @@
 .hero {
-  padding: 235px 0 220px;
-  position: relative;
+  padding: 225px 0 210px;
+
+  @media (max-width: 900px) {
+    padding: 125px 0 110px;
+  }
+
+  @media (max-width: 600px) {
+    padding: 75px 0 70px;
+  }
+
+  .container {
+    position: relative;
+  }
 
   &__content {
     max-width: 470px;
+    background-color: rgba($color: $white, $alpha: 0.7);
+    padding: 10px 10px 10px 0;
+    border-radius: 20px;
+
+    @media (max-width: 900px) {
+      max-width: 380px;
+    }
+
+    @media (max-width: 600px) {
+      padding: 10px;
+    }
   }
 
   &__title {
@@ -17,12 +39,30 @@
     span {
       color: $titleSpan;
     }
+
+    @media (max-width: 900px) {
+      font-size: 45px;
+    }
+
+    @media (max-width: 600px) {
+      font-size: 25px;
+      max-width: 260px;
+    }
   }
 
   &__text {
     font-weight: 500;
     margin-bottom: 33px;
     max-width: 400px;
+
+    @media (max-width: 600px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__actions {
+    display: flex;
+    align-items: center;
   }
 
   &__button {
@@ -30,6 +70,7 @@
     font-weight: 600;
     background-color: $titleSpan;
     color: $white;
+    margin-right: 40px;
     padding: 18px 48px;
     border-radius: 40px;
     outline: 2px solid transparent;
@@ -50,11 +91,55 @@
       outline: transparent;
       opacity: 0.75;
     }
+
+    @media (max-width: 600px) {
+      padding: 10px 18px;
+    }
+  }
+
+  &__icon {
+    &:not(:last-child) {
+      margin-right: 27px;
+    }
+
+    @media (max-width: 600px) {
+      filter: brightness(0.5);
+    }
+  }
+
+  &__image {
+    position: absolute;
+    right: -120px;
+    top: -235px;
+    z-index: -1;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -40px;
+      right: 240px;
+      width: 80px;
+      height: 80px;
+      background-image: url("../img/hero-dec.png");
+      background-size: cover;
+
+      @media (max-width: 600px) {
+        right: 150px;
+        width: 60px;
+        height: 60px;
+      }
+    }
   }
 
   &__bg {
-    position: absolute;
-    right: 0;
-    top: 0;
+    @media (max-width: 900px) {
+      width: 572px;
+      height: 540px;
+    }
+
+    @media (max-width: 600px) {
+      width: 440px;
+      height: 440px;
+    }
   }
 }
