--- a/src/scss/homepage/_why.scss
+++ b/src/scss/homepage/_why.scss
@@ -3,15 +3,41 @@
   padding: 94px 0;
   margin-bottom: 240px;
 
+  @media (max-width: 900px) {
+    margin-bottom: 120px;
+    padding: 74px 0;
+  }
+
+  @media (max-width: 600px) {
+    margin-bottom: 40px;
+    padding: 30px 0;
+  }
+
   .title {
     margin-bottom: 75px;
     color: $white;
+
+    @media (max-width: 900px) {
+      margin-bottom: 50px;
+    }
+
+    @media (max-width: 600px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     margin: 0 35px;
+    column-gap: 15px;
+    row-gap: 50px;
+
+    @media (max-width: 600px) {
+      margin: 0 auto;
+      row-gap: 25px;
+    }
   }
 
   &__item {
@@ -20,6 +46,14 @@
     max-width: 230px;
     background-repeat: no-repeat;
     background-position: center top;
+
+    @media (max-width: 900px) {
+      padding-top: 90px;
+    }
+
+    @media (max-width: 600px) {
+      padding-top: 90px;
+    }
   }
 
   &__title {
